# pq-eth-precompiles

./: Cargo.toml  LICENSE  Makefile  README.md
benches/: ntt_bench.rs
contracts/: FalconVerifier.sol  Shake256.sol
devnet/: genesis.json  launch.sh  network_params.yaml
docs/: benchmarks.md  precompiles.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_falcon_compact.rs  fuzz_ntt_fw.rs  fuzz_ntt_inv.rs  fuzz_vecaddmod.rs  fuzz_vecmulmod.rs
go/: go.mod
go/ntt/: eth_ntt.h  ntt.go  ntt_test.go
include/: eth_ntt.h
kurtosis/contracts/: FalconVerifierNTTWithLpNorm.yul  HawkVerifierDirectBound.yul  HawkVerifierNTTBound.yul
kurtosis/scripts/: falcon_fuzz.py  hawk_test.py
scripts/: falcon_demo.py  requirements.txt
src/: falcon.rs  ffi.rs  fx32_fft.rs  lib.rs  precompile.rs
tests/: falcon512_real.rs
